Remove C/FFI API and update README to reflect Rust-only library

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ keywords = ["oauth", "oauth2", "pkce", "cli", "authentication"]
 categories = ["authentication", "api-bindings"]
 
 [lib]
-crate-type = ["lib", "staticlib", "cdylib"]
+crate-type = ["lib"]
 
 [dependencies]
 base64 = "0.22"
