--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ rand = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 parking_lot = "0.12"
+dirs = "5.0"
+url = "2.5"
 
 [dev-dependencies]
 criterion = "0.5"
