--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,9 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 parking_lot = "0.12"
 dirs = "5.0"
+reqwest = { version = "0.12", features = ["blocking", "json"] }
+thiserror = "2.0"
+webbrowser = "1.0"
 
 [dev-dependencies]
 criterion = "0.5"
