fix: exclude unnecessary files from crates.io package (#10)
The package was exceeding crates.io's 10MB limit because it included
build artifacts, CI configs, scripts, and other non-essential files.

Added exclude patterns to Cargo.toml to only include source code,
reducing package size from >10MB to ~46KB.

Excluded:
- target/ (build artifacts)
- .github/ (CI configuration)
- scripts/ (build scripts)
- swift/ (Swift wrapper, not needed for Rust crate)
- examples/ (available in GitHub repo)
- Build/dev tools config files

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,19 @@ description = "Cross-platform OAuth 2.0 with PKCE for CLI applications"
 repository = "https://github.com/tuist/schlussel"
 keywords = ["oauth", "oauth2", "pkce", "cli", "authentication"]
 categories = ["authentication", "api-bindings"]
+exclude = [
+    "target/",
+    ".github/",
+    ".git/",
+    "scripts/",
+    "swift/",
+    "examples/",
+    "*.sh",
+    ".mise.toml",
+    "cliff.toml",
+    "RELEASE.md",
+    "CLAUDE.md",
+]
 
 [lib]
 crate-type = ["lib", "staticlib", "cdylib"]
