fix: remove duplicate version title from release notes (#14)
The release notes showed '## [0.1.4] - 2025-11-03' which duplicates
the GitHub release title.

Now removes the version header line from git-cliff output since
GitHub already displays the version as the release title.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -126,8 +126,12 @@ jobs:
           VERSION=${{ steps.next-version.outputs.NEXT_VERSION }}
 
           echo "RELEASE_NOTES<<EOF" >> "$GITHUB_OUTPUT"
-          # Get changelog content, removing "Changelog" header if present
-          git cliff --latest | sed '/^# Changelog$/d' | sed '/^All notable changes/,/Semantic Versioning/d' | sed '1{/^$/d;}' >> "$GITHUB_OUTPUT"
+          # Get changelog content, remove headers and version title (GitHub release already shows version)
+          git cliff --latest | \
+            sed '/^# Changelog$/d' | \
+            sed '/^All notable changes/,/Semantic Versioning/d' | \
+            sed '/^## \[.*\] - [0-9-]*$/d' | \
+            sed '1{/^$/d;}' >> "$GITHUB_OUTPUT"
 
           # Add XCFramework installation instructions
           echo "" >> "$GITHUB_OUTPUT"
